<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Choir Buddy</string>
    <string name="EDIT_current_note_value">Current time value</string>
    <string name="EDIT_msg_inserterror_notetolong">This note won\'t fit into current time</string>
    <string name="no_timestep">No metrum specified.</string>
    <string name="dialog_timestep_custom">custom:</string>
    <string name="EDIT_timestepdialog_title">Choose current metrum</string>
    <string name="NEWSCORE_title">Create new score</string>
    <string name="label_choose_clef">Clef</string>
    <string name="label_choose_key_signature">Key signature</string>
    <string name="label_choose_meter_signature">Meter signature</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_create_new_score">Create</string>
    <string name="label_score_title">Score title</string>
    <string name="errordialog_title">Error occured</string>
    <string name="errordialog_button">OK. Shit happens.</string>
    <string name="errormsg_unrecoverable">Sorry, severe error occured. Try report it to us.</string>
    <string name="NEWSCORE_errormsg_gonewrong">Something gone wrong. Try again.</string>
    <string name="msg_loading_please_wait">Loading. Please wait…</string>
    <string name="format_auto_copy">%s (auto-copy)</string>
    <string name="menu_label_save">Save</string>
    <string name="toast_score_saved">%s saved.</string>
    <string name="toast_failed_to_save_score">Failed to save %s.</string>
    <string name="errormsg_exception_try_later">Ops, error occured. Try again later.</string>
    <string name="PLAY_errormsg_playingfailed_tryagain">Ops, something wrong happened. Try play again.</string>
    <string name="PLAY_title">Play: %s</string>
    <string name="label_tempo">Tempo [BPM]</string>
    <string name="popup_title_change_title">Change title</string>
    <string name="errormsg_failed_to_delete">Ops, failed to delete.</string>
    <string name="confirmmsg_delete">Do you want to delete \'%s\'?</string>
    <string name="popup_title_copytitle">Title of the copy</string>
    <string name="template_copy_title">%s (copy)</string>
    <string name="errormsg_failed_to_duplicate">Ops, failed to create a copy.</string>
    <string name="popup_title_export_as_midi">Export as MIDI tune</string>
    <string name="popup_msg_exportmidi">Name for destination .midi file:</string>
    <string name="errormsg_external_storage_not_present">External storage (SD card) is not present.</string>
    <string name="popup_msg_file_already_exists">File %s already exists!</string>
    <string name="overwrite">Overwrite</string>
    <string name="errormsg_failed_to_export_midi">Failed to save MIDI file, try again later.</string>
    <string name="toast_midi_export_finished">MIDI file exported.</string>
    <string name="change">Change</string>
    <string name="tip_midifile_exported">Score has been saved as \'%1$s\' file on external storage. You can find it in any music player (under artist \'%2$s\' or album \'%3$s\') or directly through the file browser in \'%4$s\' folder</string>
    <string name="label_dismiss_tip">Don\'t remind</string>
    <string name="tipdialog_title">Tip</string>
    <string name="MAIN_label_create_new_score">Create new score</string>
    <string name="menu_label_play">Play</string>
    <string name="spinner_label_normal_voice">single voice</string>
    <string name="spinner_label_upper_voice">upper voice</string>
    <string name="spinner_label_lower_voice">lower voice</string>
    <string name="spinner_displaymode">Display as</string>
    <string name="NEWSCORE_button_editor_preferences">Editor preferences</string>
    <string name="VISPREFS_title">Editor preferences</string>
    <string name="VISPREFS_max_upper_added_line">Max. upper added line</string>
    <string name="VISPREFS_max_lower_added_line">Max. lower added line</string>
    <string name="VISPREFS_descr_mode">Determines orientation of the notes stems.</string>
    <string name="VISPREFS_descr_upper">Allows to adjust highest pitch you can entry.</string>
    <string name="VISPREFS_descr_lower">Allows to adjust lowest pitch you can entry.</string>
    <string name="menu_label_editor_prefs">Preferences</string>
    <string name="PLAY_options_play_with_metronome">play with metronome</string>
    <string name="PLAY_options_prepend_intro">prepend empty bar</string>
    <string name="errormsg_failed_to_refresh">Ops, failed to refresh.</string>
    <string name="confirmmsg_if_save_changes">Do you want to save changes?</string>
    <string name="EDIT_confirmmsg_if_save_preferences">Do you want to save changes in preferences?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="MAIN_msg_no_scores_yet">You have no saved scores yet. Use button below to create one.</string>
    <plurals name="format_minutes_ago">
        <item quantity="one">%d minute ago</item>
        <item quantity="other">%d minutes ago</item>
	</plurals>
    <plurals name="format_hours_ago">
        <item quantity="one">%d hour ago</item>
        <item quantity="other">%d hours ago</item>
	</plurals>
    <plurals name="format_days_ago">
        <item quantity="zero">today, %2$2d:%3$2d</item>
        <item quantity="one">yesterday, %2$2d:%3$2d</item>
        <item quantity="other">%1$d days ago, %2$2d:%3$2d</item>
	</plurals>
    <string name="dialog_midi_export_explain_permission">MIDI file will be saved on external storage in public Music folder. This requires a permission to write to external storage. Do you want to continue?</string>
    <string name="configure">Configure</string>
</resources>
