<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
	>
		<pl.edu.mimuw.students.pl249278.android.ui.view.FlowLayout
		    style="@style/VISPREFS_entry"
		>
			<TextView
	            style="@style/VISPREFS_entry_label"
	            android:text="@string/spinner_displaymode"
	       	/>
			<Spinner
			    android:id="@+id/displaymode_spinner"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:prompt="@string/spinner_displaymode"
		    />
			<TextView
			    style="@style/VISPREFS_entry_descr"
			    android:text="@string/VISPREFS_descr_mode"
			/>
		</pl.edu.mimuw.students.pl249278.android.ui.view.FlowLayout>
		<pl.edu.mimuw.students.pl249278.android.ui.view.FlowLayout
		    style="@style/VISPREFS_entry"
		>
	        <TextView
	            style="@style/VISPREFS_entry_label"
	            android:text="@string/VISPREFS_max_upper_added_line"
	       	/>
			<include 
			    android:id="@+id/VISPREFS_spinner_upper"
			    layout="@layout/vispreferences_numberspinner"  
		    />
			<TextView
			    style="@style/VISPREFS_entry_descr"
			    android:text="@string/VISPREFS_descr_upper"
			/>
	    </pl.edu.mimuw.students.pl249278.android.ui.view.FlowLayout>
		<pl.edu.mimuw.students.pl249278.android.ui.view.FlowLayout
		    style="@style/VISPREFS_entry"
		>
	        <TextView
	            style="@style/VISPREFS_entry_label"
	            android:text="@string/VISPREFS_max_lower_added_line"
	       	/>
			<include 
			    android:id="@+id/VISPREFS_spinner_lower"
			    layout="@layout/vispreferences_numberspinner"  
		    />
			<TextView
			    style="@style/VISPREFS_entry_descr"
			    android:text="@string/VISPREFS_descr_lower"
			/>
		</pl.edu.mimuw.students.pl249278.android.ui.view.FlowLayout>
	</LinearLayout>
</ScrollView>